feat: adding navigation and homepage for UI Library

--- a/index.html
+++ b/index.html
@@ -1,26 +1,44 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Minnal UI - A lightning fast UI component library</title>
-     <link rel="stylesheet" href="style.css">
-  
+<!DOCTYPE html>
+<html lang="en">
 
- </head>
- 
- <body>
-     <nav>
-        
-         <label for="check">
-             <i class="fas fa-bars"></i>
-         </label>
-         <label class="logo">MinnalUI</label>
-         <ul>
-             <li><a class="active" href="#">Home</a></li>
-             <li><a href="doc/doc.html">Docs</a></li>
-         </ul>
-     </nav>
- </body>
- </html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Minnal UI - A lightning fast UI component library</title>
+    <link rel="stylesheet" href="style.css">
+
+
+</head>
+
+<body>
+    <nav>
+
+        <label for="check">
+            <i class="fas fa-bars"></i>
+        </label>
+        <label class="logo">MinnalUI</label>
+        <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="doc/doc.html">Docs</a></li>
+        </ul>
+    </nav>
+
+    <div class="hero-contianer">
+        <div class="hero-content">
+            <h1>
+                Fast and quick components library to help you
+                create simple, intuitive and beautiful experiences.
+            </h1>
+            <div class="btn-container">
+                <a href="./doc/doc.html">
+                    <button class="btn btn-primary ">
+                        Get Started
+                    </button>
+                </a>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
